[package]
name = "grotto"
version = "0.1.0"
authors = ["ColonisationCaptain <52425971+ColonisationCaptain@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
iced = { version = "0.3.0", features = ["image"] }
env_logger = "0.8"
